# Spaceimac

./: CMakeLists.txt  README.md
TP1/: exo2_triangle_couleurs.cpp  exo4_quads.cpp  exo5_disque.cpp  exo6_disque.cpp
TP2/: exo1_triangle_couleur.cpp  exo6_maison.cpp
TP3/: exo1_sphere.cpp  exo2_lune.cpp  exo4_lune_multitexture.cpp  exo5_camTrackBall.cpp  exo7_camTrackBallLight.cpp
TP_Spaceimac/: CMakeLists.txt  main.cpp
TP_Spaceimac/shaders/: vertexsharder.glsl
glimac/: CMakeLists.txt
glimac/include/glimac/: Cube.hpp  Plane.hpp  TrackballCamera.hpp  common.hpp
glimac/include/project/: Astre.hpp  GameManager.hpp  Gaseous.hpp  Planet.hpp  RenderManager.hpp  Satellite.hpp  Skybox.hpp  Sun.hpp  Telluric.hpp  Texte.hpp  Texture.hpp  Time.hpp
glimac/src/: Plane.cpp  TrackballCamera.cpp
glimac/src/project/: Astre.cpp  Cube.cpp  GameManager.cpp  Gaseous.cpp  Planet.cpp  RenderManager.cpp  Satellite.cpp  Skybox.cpp  Sun.cpp  Telluric.cpp  Texte.cpp  Texture.cpp  Time.cpp
